--- a/client/account.cfg
+++ b/client/account.cfg
@@ -1,2 +1,2 @@
 gitURL = https://gitlab.aiacademy.tw/junew/federated_aia_test.git
-account = at102091:12345678
+account = AIA-federated-0121:0121federated
