--- a/client/account.cfg
+++ b/client/account.cfg
@@ -1,2 +1,2 @@
-gitURL = https://gitlab.aiacademy.tw/junew/federated_aia_test.git
+gitURL = https://github.com/June103310110/Federated_server_June.git
 account = AIA-federated-0121:0121federated
