--- a/client/account.cfg
+++ b/client/account.cfg
@@ -1,2 +1,2 @@
-gitURL = https://github.com/June103310110/Federated_server_June.git
-account = AIA-federated-0121:0121federated
+gitURL = https://gitlab.com/aia-federated-0121/june-federated-server.git
+account = aiafederated0121:federated0121
